--- a/src/index.css
+++ b/src/index.css
@@ -1,20 +1,2 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
 
-:root {
-  --primary-color: #4daf54;
-}
-
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-body {
-  font-family: 'Poppins', sans-serif;
-  overflow: hidden;
-}
-.main {
-  display: flex;
-  height: 100vh;
-  background-image: linear-gradient(to right, #4daf54, #3d8880);
-}
+@import 'styles/common.scss'
