--- a/src/pages/LessonOne/LessonOne.module.scss
+++ b/src/pages/LessonOne/LessonOne.module.scss
@@ -2,5 +2,5 @@
 .main {
   display: flex;
   height: 100vh;
-  background-image: linear-gradient(to right, $primary-color, $secondary-color);
+  background-image: linear-gradient(to right, var(--primary-color), var(--secondary-color));
 }
