--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,6 +1,8 @@
-// Lesson 1
-$primary-color: #4daf54;
-$secondary-color: #3d8880;
-
-// Lesson 3
-$third-color: #e26e70;
+:root {
+  // Lesson 1
+  --primary-color: #4daf54;
+  --secondary-color: #3d8880;
+  // Lesson 3
+  --third-color: #e26e70;
+  --transparent-color: transparent;
+}
